[gd_scene load_steps=2 format=3 uid="uid://b3gif3e78a12h"]

[ext_resource type="Script" path="res://src/scripts/ui/components/about_information.gd" id="1_jrbic"]

[node name="AboutInformation" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
script = ExtResource("1_jrbic")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Board Engine"
horizontal_alignment = 1

[node name="VersionNumber" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Version x.x.x"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Copyright Ryanabx 2023"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GitHub" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GitHub"

[node name="Docs" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Docs (WIP)"

[node name="SubmitFeedback" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Submit Feedback"

[connection signal="pressed" from="HBoxContainer/GitHub" to="." method="_on_github_pressed"]
[connection signal="pressed" from="HBoxContainer/Docs" to="." method="_on_docs_pressed"]
[connection signal="pressed" from="HBoxContainer/SubmitFeedback" to="." method="_on_submit_feedback_pressed"]
